# ChangeLog for media-libs/amanith
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/amanith/Attic/ChangeLog,v 1.8 2009/12/25 18:14:57 yngwin Exp $

  25 Dec 2009; Ben de Groot <yngwin@gentoo.org> amanith-0.3-r2.ebuild:
  Remove deprecated dependency on x11-libs/qt

  19 Jul 2009; Samuli Suominen <ssuominen@gentoo.org> amanith-0.3-r2.ebuild,
  +files/amanith-0.3-gcc44.patch:
  Fix building with GCC 4.4 wrt #269245, thanks to Victor Ostorga.

  04 Dec 2008; Markus Meier <maekke@gentoo.org> amanith-0.3-r2.ebuild:
  fix for bug #247744, do not try to install plugins, when they aren't
  built.

  11 Aug 2008; Ben de Groot <yngwin@gentoo.org> amanith-0.3-r2.ebuild:
  Fix split qt4 deps wrt bug 217161.

*amanith-0.3-r2 (11 Aug 2008)

  11 Aug 2008; Markus Meier <maekke@gentoo.org>
  -files/amanith-0.3-build.patch, -files/amanith-0.3-freetype.patch,
  +files/amanith-0.3-freetype-fix.patch,
  +files/amanith-0.3-gcc-C++fix.patch, -files/amanith-0.3-gcc4.patch,
  +files/amanith-0.3-gcc43.patch,
  +files/amanith-0.3-nothirdpartystatic.patch,
  +files/amanith-0.3-system-freetype.patch,
  +files/amanith-0.3-system-glew.patch,
  +files/amanith-0.3-system-libjpeg.patch,
  +files/amanith-0.3-system-libpng.patch, -amanith-0.3-r1.ebuild,
  +amanith-0.3-r2.ebuild:
  revision bump with patches from fedora, also reported in bug #202315

  11 Jun 2007; Mike Frysinger <vapier@gentoo.org>
  +files/amanith-0.3-freetype.patch, amanith-0.3-r1.ebuild:
  Fix building with newer freetype versions #179734 by Elliott Sales de Andrade.

*amanith-0.3-r1 (11 Nov 2006)

  11 Nov 2006; Mike Frysinger <vapier@gentoo.org> +amanith-0.3-r1.ebuild:
  Fix example install #154700 by Cedric Pinson.

*amanith-0.3 (18 Sep 2006)

  18 Sep 2006; Mike Frysinger <vapier@gentoo.org> :
  Initial import.  Ebuild submitted by me #115754.